--- a/src/app/agent-saisie/agent-saisie.component.html
+++ b/src/app/agent-saisie/agent-saisie.component.html
@@ -47,7 +47,7 @@
         </div>
       </div>
     </div>
-    <div  style="align-items: center; margin-top: -541px; margin-left: 470px; 
+    <!-- <div  style="align-items: center; margin-top: -541px; margin-left: 470px; 
   
     background-color: #ffffff;
     opacity: 100%;
@@ -61,7 +61,7 @@
         <img src="./../assets/screen.svg" class="w-6 h-8 " style="margin-left: 250px;"/>
     <h1 class="text-blue-500 font-bold px-3 py-3">Constat Numérique</h1>
    </div>
-    </div>
+    </div> -->
   
   </section>
   
