--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -93,7 +93,7 @@
         <!-- Items Section -->
         <li class="hover:bg-gray-100">
           <a
-                      routerLink="/agent" routerLinkActive="active"
+                      routerLink="/home" routerLinkActive="active"
             class="h-16 px-6 flex flex justify-center items-center w-full hover:bg-blue-500  
             focus:text-orange-500" >
             
